#1 fixed the overflow issue in webpage

--- a/frontend/src/assets/css/response.css
+++ b/frontend/src/assets/css/response.css
@@ -128,6 +128,9 @@
     font-size: 13px;
     outline: none;
   }
+  .textbg {
+    display: none;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .banner_section_footer {
